--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev", 
+    "export": "npm run build && next export -o _static",
     "start": "next start",
     "lint": "next lint"
   },
